# Strategy_Pattern_Calculator

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
spcalc/: add.py  divide.py  main.py  multiply.py  subtract.py
src/: add.py  calculator.py  divide.py  main.py  minus.py  multiply.py  operation.py  plus.py  substract.py  subtract.py
tests/: test_calculator.py
