[metadata]
name = spcalc
version = 1.2.0
author = Yasiru Rangana
author_email = yrangana@gmail.com
description = Command Line Calculator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yrangana/Strategy_Pattern_Calculator
project_urls =
    Bug Tracker = https://github.com/yrangana/Strategy_Pattern_Calculator/issues
    repository = https://github.com/yrangana/Strategy_Pattern_Calculator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:

install_requires =
    click == 8.1.7

[options.entry_points]
console_scripts =
    spcalc = src.main:main
